<resources>
    <string name="app_name">Sabang 17</string>
    <string name="title_home">Info</string>
    <string name="title_event">Kegiatan</string>
    <string name="title_cadre">Kaderisasi</string>
    <string name="title_schedule">Jadwal</string>
    <string name="title_business">Wirausaha</string>
    <string name="title_critics">Aspirasi</string>
    <string name="title_credit">Tentang</string>
    <string name="title_aspiration">Input Aspirasi</string>
    <string name="title_detail_event">Detail Kegiatan</string>
    <string name="title_detail_goods">Detail Barang</string>
    <string name="title_detail_aspiration">Respon Aspirasi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy_price">Rp 13000</string>

    <!--CRITIC PAGE-->
    <string name="critic_name">Nama</string>
    <string name="critic_origin">Asal Komisariat</string>
    <string name="critic_contact">Nomor Kontak</string>
    <string name="critic_message">Isi kritik / saran</string>
    <string name="critic_reply">Balasan anda</string>
    <string name="critic_submit">Kirim</string>
    <string name="critic_field_empty">Kolom tidak boleh kosong</string>

    <!--SCHEDULE PAGE-->
    <string name="all_day">All Day</string>
    <string name="month">Bulan</string>
    <string name="event_list">Daftar Jadwal</string>

    <!--CREDIT PAGE-->
    <string name="hmi_logo">HMI logo</string>
    <string name="motion_logo">Lab logo</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="about_content">\"Sabang 17\" merupakan aplikasi berbasis android yang dikembangkan
        oleh bidang litbang HMI cabang Bandung. Besar harapan aplikasi ini dapat menjadi sumbangsih
        bagi kader-kader sewilayah kerja HMI cabang Bandung. Kami menyadari masih terdapat banyak
        kekurangan dari aplikasi ini. Maka dari itu kami mengharapkan masukan yang membangun untuk
        perbaikan aplikasi ini kedepannya</string>
    <string name="salute">Hormat Kami,</string>
    <string name="person_in_charge">Aidil Afdan Pananrang</string>
    <string name="person_department">Ketua Bidang Litbang HMI Cabang Bandung</string>
    <string name="person_contact">+6281223718060</string>
    <string name="partner">Berkolaborasi dengan,</string>
    <string name="further_info">Jika anda ingin info kegiatan, info perkaderan, ataupun info kewirausahaan
        komisariat anda dicantumkan dalam aplikasi ini, silahkan kirimkan via email ke aplikasisabang17@gmail.com</string>

    <!--INFO DETAIL PAGE-->
    <string name="info_image">information image</string>
</resources>
