<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/title_business" />

    <item
        android:id="@+id/navigation_critics"
        android:icon="@drawable/ic_critics_black_24dp"
        android:title="@string/title_critics" />

    <item
        android:id="@+id/navigation_credits"
        android:icon="@drawable/ic_developer_mode_black_24dp"
        android:title="@string/title_credit" />

</menu>
