<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginTop="12dp"
            android:contentDescription="@string/hmi_logo"
            android:src="@mipmap/ic_launcher_hmi"
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="150dp" />
        <TextView
            android:layout_marginTop="12dp"
            android:text="@string/about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="12dp"
            android:autoLink="email"
            android:text="@string/further_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="12dp"
            android:text="@string/salute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/person_in_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/person_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/person_contact"
            android:autoLink="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>