<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buahbatu.sabang17.CriticDetailActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/critic_subject_text"
        android:padding="9dp"
        android:textColor="@color/colorWhite"
        android:text="@string/app_name"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/critic_messages_recycler"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_response_self"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBar"
        android:weightSum="2"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/critic_message"
            android:hint="@string/critic_reply"
            android:layout_weight="1.7"
            android:maxLines="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/critic_submit"
            android:contentDescription="@string/critic_submit"
            android:background="@drawable/yellow_button_background_selector"
            app:srcCompat="@drawable/ic_send_white_24dp"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>